backup before major update
# Conflicts:
#	GestionProduit/src/main/resources/application.properties